// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Nav /> renders closed 1`] = `
<div>
  <div
    class="opacity-0 ml-auto sticky border z-[1000] p-0 bg-darkg top-0 w-[20rem] text-lightg text-left pb-2 pt-6"
  >
    <ul
      class="w-[20rem]"
    >
      <a
        class="block w-1/2 hover:text-lgg pointer-events-none"
        href="/add"
        target="blank"
      >
        <li
          class="cursor-pointer pl-6 mb-8"
        >
          Add a recipe
        </li>
      </a>
      <a
        class="block w-1/2 hover:text-lgg pointer-events-none"
        href="https://github.com/davepaulsanders/nice_and_sandy_cookbook/issues"
        target="blank"
      >
        <li
          class="cursor-pointer pl-6 mb-8"
        >
          Complain
        </li>
      </a>
    </ul>
  </div>
</div>
`;

exports[`<Nav /> renders open 1`] = `
<div>
  <div
    class="opacity-1 ml-auto sticky border z-[1000] p-0 bg-darkg top-0 w-[20rem] text-lightg text-left pb-2 pt-6"
  >
    <ul
      class="w-[20rem]"
    >
      <a
        class="block w-1/2 hover:text-lgg "
        href="/add"
        target="blank"
      >
        <li
          class="cursor-pointer pl-6 mb-8"
        >
          Add a recipe
        </li>
      </a>
      <a
        class="block w-1/2 hover:text-lgg "
        href="https://github.com/davepaulsanders/nice_and_sandy_cookbook/issues"
        target="blank"
      >
        <li
          class="cursor-pointer pl-6 mb-8"
        >
          Complain
        </li>
      </a>
    </ul>
  </div>
</div>
`;
